[gd_scene load_steps=4 format=3 uid="uid://dovf40pax5p1w"]

[ext_resource type="Script" uid="uid://dnet0qjisphht" path="res://mechanics/InventorySystem/purchasable.gd" id="1_nlhvf"]
[ext_resource type="Resource" uid="uid://sjqurx0cnlmh" path="res://mechanics/InventorySystem/GameItems/ITEM_grain.tres" id="2_76qva"]

[sub_resource type="ImageTexture" id="ImageTexture_nlhvf"]

[node name="Purchasable" type="Control" node_paths=PackedStringArray("itemSprite", "title", "cost")]
layout_mode = 3
anchors_preset = 0
offset_top = -14.0
offset_bottom = -14.0
script = ExtResource("1_nlhvf")
item = ExtResource("2_76qva")
itemSprite = NodePath("itemSprite")
title = NodePath("Title")
cost = NodePath("Cost")

[node name="itemSprite" type="Sprite2D" parent="."]
position = Vector2(57, 59)
scale = Vector2(0.3, 0.3)
texture = SubResource("ImageTexture_nlhvf")

[node name="Title" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 132.0
offset_top = 33.0
offset_right = 217.0
offset_bottom = 66.0
text = "TITLE"

[node name="Cost" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 132.0
offset_top = 61.0
offset_right = 217.0
offset_bottom = 94.0
text = "Cost: 100"

[node name="buy1" type="Button" parent="."]
layout_mode = 0
offset_left = 243.0
offset_top = 23.0
offset_right = 297.0
offset_bottom = 56.0
text = "BUY 1"

[node name="buy10" type="Button" parent="."]
layout_mode = 0
offset_left = 239.0
offset_top = 61.0
offset_right = 302.0
offset_bottom = 94.0
text = "BUY 10"

[connection signal="button_up" from="buy1" to="." method="_on_buy_1_button_up"]
[connection signal="button_up" from="buy10" to="." method="_on_buy_10_button_up"]
